--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged && ng lint",
+      "pre-commit": "pretty-quick --staged",
       "pre-push": "ng build --aot true"
     }
   },
